--- a/src/Components/HeroBlock/HeroBlock.css
+++ b/src/Components/HeroBlock/HeroBlock.css
@@ -14,7 +14,7 @@
     padding: 8px 18px;
     border-radius: 20px;
     width: fit-content;
-    box-shadow: 0 0 16px rgba(0, 123, 255, 0.5); /* легкое голубоватое свечение */
+    box-shadow: 0 0 16px rgba(0, 123, 255, 0.9); /* легкое голубоватое свечение */
     margin-top: 80px;
 
 }
